Add drag function

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <div id="root">
       <!-- <div class="window-body"> -->
       <div id="drawing">
-        <div class="title-bar">
+        <div class="title-bar" id="draggable-bar">
           <div class="title-bar-text">Only Pics</div>
           <div class="title-bar-controls">
             <button aria-label="Close"></button>
